--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "dependencies": {
     "assert": "^1.4.1",
+    "axios": "^0.17.1",
+    "client-oauth2": "^4.1.0",
     "url": "^0.11.0"
   }
 }
